tests/fixtures/positive/di-hygiene/IntoMapMissingKey.kt
package dihygiene

annotation class Provides
annotation class IntoMap

interface Handler
class HandlerImpl : Handler

class HandlerModule {
    @Provides
    @IntoMap
    fun provideHandler(): Handler = HandlerImpl()
}
