tests/fixtures/negative/potential-bugs/CastNullableToNonNullableType.kt
package potentialbugs

class Example {
    fun process(nonNull: String) {
        val result = nonNull as CharSequence
        println(result)
    }
}
